6-components/_components.simple-blocks.scss
/*===============================
=           FUN FACT BLOCK      =
===============================*/


$fun-fact-bg-color: $grey-gallery;


//.block__fact {}


.fact__title {
    margin-bottom: 0;
    line-height: 1;
    font-size: $h2-size * 1.5;
    color: $grey-mako;
    text-align: right;
}

.fact__content,
.fact__title {
    width: 100%;
}

.fact__content {
    flex-wrap: wrap;

    > p { width: 100%; }
    .note { font-size: 90%; }
}


@include breakpoint( $desktop-and-bigger ) {

    .fact__heading,
    .fact__content {
        display: flex;
        align-items: center;
    }

}


@include breakpoint( $tablet-and-smaller ) {

    .fact__heading.block { padding-bottom: 0; }

    .fact__content,
    .fact__title {
        text-align: center;
    }

    .fact__title {
        margin-bottom: .5em;
        font-size: $h2-size * 1.35;
    }
}





/*===============================
=     NEED MORE INFO BLOCK      =
===============================*/

$nm-bg-color: $grey-gallery;

.need-more {
    background-color: $nm-bg-color;
    padding: 1em;
    text-align: center;

    .need-more-block {
        padding-top: 1em;

        li {
            padding: .5em 0;

            a {
                cursor: pointer;
                text-decoration: underline;
                white-space: nowrap;
            }
        }

        @include breakpoint ( $desktop-and-bigger) {
            width: 100%;
            max-width: 850px;
            margin-right: auto;
            margin-left: auto;

            h3 {
                font-size: $h4-size;
                float: left;
                margin-bottom: 0.8em;
            }

            ul {
                clear: right;
            }

            li {
                padding: 0.5em 0.75em;
                display: inline;
                line-height: 1.5;
            }
        }

    }
}



/*===============================
=       MARKETING ABSTRACT      =
===============================*/

.promo-abstract {
    font-size: $h3-size;

    p { max-width: 40em; }
}


/*===============================
=      SUBJECT INTRO BLOCK      =
===============================*/

.intro-about-block {
    .intro-about {
        padding: 1.5em;
        @include breakpoint( $tablet-and-bigger) {
            float: left;
            @include make-table-column( $two-col-layout-left-ratio);
        }
    }
    .about-subjects-block {
        padding: 1.5em;
        border-bottom: 1px solid $grey-alto;

        @include breakpoint( $tablet-and-bigger) {
            float: right;
            @include make-table-column( $two-col-layout-right-ratio);
            border-left: 1px solid $grey-alto;
            border-bottom: 0;
        }
    }
}


/*===============================
=      STUDY OPTIONS BLOCK      =
===============================*/

.subject-block {
    .explore-postgrad {
        margin-left: 1.5em;
        margin-top: 1em;
        font-size: .9em;
    }
}

.toggle-header {
    display: table;
    width: 100%;
    vertical-align: middle;

    a {
        display: block;
        text-decoration: none;

        h2,
        h3 {
            @include linkify;

            .ico {
                display: block;
                float: left;
                width: 1em;
                padding-right: .5em;
            }
        }
    }

    h2,
    h3 {
        display: inline-block;
        margin-bottom: 0;
    }

    .tags {
        position: relative;
        top: -.1em;
        margin-left: 1.5em;
        cursor: default;
    }
}

/* List of tags */
.tags {
    display: inline-block;
    color: $grey-stack;

    &.ico:before {
        margin-right: .25em;
        font-size: 110%;
    }

    &.small { font-size: 90%; }

    .tag {
        display: inline-block;
        font-size: 90%;
        font-weight: $weight-normal;

        @include after( $text: '/' ) {
            padding: 0 .15em;
        }

        &:last-child {
            &::after { content: ""; }
        }
    }

    ul & { margin-left: .3em; }

    .content-simple ul & {
        margin-left: 0;
        cursor: default;

        &:after { padding: 0; }
    }
}

.related-degree,
.major,
.nested-section {
    .collapsible {
        max-height: 20000px;
        transition: .5s ease all;

        &.ng-hide {
            max-height: 0;
            opacity: 0;
        }
    }
}


/*===============================
=     DEGREES BLOCK      =
===============================*/


/** Related study options . */

.block__study-options {

    h2 { margin-bottom: 0; }

    .degree-block {
        padding: .4em 1em;
    }
}

/** Collapsible control is LEFT inside smaller of the two column block. */
@include breakpoint ( $desktop-and-bigger ) {
    .two-col-layout .block:last-child .collapsible__control {
        text-align: left;
    }
}


/** Example courses block (based on `related-areas`) */
.example-courses {
    .grid-list { font-size: 85%; }
    .title { height: 3em; }
}



/*===============================
=     IMAGES BLOCK             =
===============================*/

.images-block {
    img {
        width: 100%;
        max-width: 500px;
        border-bottom: 2px solid transparent;

        @include hoverify() {
            border-bottom: 2px solid $blue-endeavoura;
        }
    }
}

.explore-page {
    @include centralise;

    @include breakpoint ( $tablet-and-bigger ) {
        .block-container .block { @include grid-column( 6 ); }
    }
}


/*===============================
=           FEES                =
===============================*/

.fees {
    .ico.exchange {
        margin: 0 1em;
        color: $grey-dusty;

        @include breakpoint( $mobile-large-and-smaller ) {
            margin-left: 0;

            &:before {
                transform: rotate( 90deg );
            }
        }
    }
}


/*===============================
= CUSTOM NOT FOUND (404) BLOCK  =
===============================*/

.not-found {
    .btn {
        margin-left: 0;
        margin-right: 0;
    }
}

